# azure-kinect-pcl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml
azure_pcl/: CMakeLists.txt
azure_pcl/include/: colourmanager.hpp  common.h  kinect_reader.h  pch.h  pcl_clustering.h  point_cloud_utils.h
azure_pcl/src/: kinect_reader.cpp  main.cpp  pcl_clustering.cpp  point_cloud_utils.cpp
